# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: configs.py  database.py  dependencies.py  init_data.py  main.py
app/api/cruds/: item.py  login.py  user.py
app/api/models/: user.py
app/api/routers/: item.py  login.py  post.py  user.py
app/api/schemas/: item.py  token.py  user.py
app/api/utils/: security.py
