[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Hồ Đăng Nhân <51161577+hDn24@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
psycopg2 = "^2.9.9"
pydantic-settings = "2.2.1"

python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
