[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["hDn24"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
python-multipart = "^0.0.7"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
psycopg = {extras = ["binary"], version = "3.1.19"}
pydantic-settings = "2.2.1"
pydantic = ">2.0"

python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
black = "^23.10.1"
mypy = "^1.6.1"

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
extend-exclude = ["*.ipynb"]

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
